- make native and direct notification models reuse same code path - Fix memory manager debugging statements - Use HashSets with locks rather than ConcurrentHashMaps in   the JNIMemoryAllocator and JNIMemoryManager because they seem   to perform better in profiling tests (allocation of segments in the   ConcurrentHashMaps ended up seriously increasing memory usage as they   don't seem to ever be released). - Update documention for the JNIMemoryManager MemoryModel stuff - Rewrite MediaTool classes so that they explicitly manage Xuggler   references, to make them robust in the face of different memory   models (have not updated doc yet). - Refactor the MemoryManagerExhaustiveTest class so it was callable   from JMeter and NetBeans profiler - Remove unused imports in MediaViewerTest
- I still have a race-condition on shut-down in the Viewer, but I'm waiting
  for Robert to help figure that out.